fix: scrollbar 색상 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@ a {
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 9999px;
-    background-color: var(--color-gray-500);
+    background-color: var(--color-slate-300);
   }
   &::-webkit-scrollbar-track {
     background-color: transparent;
